--- a/JavaScript_Coding_Challenge_2/index.html
+++ b/JavaScript_Coding_Challenge_2/index.html
@@ -15,21 +15,14 @@
                 <hr>
                 <h2 class="text-center">JavaScript Coding Challenge 2</h2>
                 <hr>
-                <h4>
-                    <a href="https://careerclub.net/index.php/challenge/7/JavaScript+Coding+Challenge+2"> Challange Link from careerclub.net</a>
-                </h5>
+                <h4><a href="https://careerclub.net/index.php/challenge/7/JavaScript+Coding+Challenge+2"> Challange Link from careerclub.net</a> </h4>
                 <p>1.Create an array with some years where persons were born</p>
                 <p>2.Create an empty array (just [] )</p>
-                <p>3.Use a loop to fill the array with the ages of the persons 4.Use another loop to log into the console whether each person
-                    is of full age (18 or older), as well as their age </p>
-                <p>5.Finally, create a function called printFullAge which receives the array of years as an argument, executes the steps 2.,
-                    3. and 4. and returns an array of true/false boolean values: true if the person is of full age (>= 18 years) and false
-                    if not (
-                    < 18 years)</p>
-                        <p>6.Call the function with two different arrays and store the results in two variables: full_1 and full_2</p>
-                        <p>Example input: [1965, 2008, 1992] Example output: [true, false, true] Hint: you can use a loop not only to read from
-                            an array, like y[i] but also to set values in an array, like y[i]=. .. You can also use the specific array methods.</p>
-                        <h4>Please look the solution in the console</h4>
+                <p>3.Use a loop to fill the array with the ages of the persons 4.Use another loop to log into the console whether each person is of full age (18 or older), as well as their age </p>
+                <p>5.Finally, create a function called printFullAge which receives the array of years as an argument, executes the steps 2., 3. and 4. and returns an array of true/false boolean values: true if the person is of full age (>= 18 years) and false if not (< 18 years)</p>
+                <p>6.Call the function with two different arrays and store the results in two variables: full_1 and full_2</p>
+                <p>Example input: [1965, 2008, 1992] Example output: [true, false, true] Hint: you can use a loop not only to read from an array, like y[i] but also to set values in an array, like y[i]=. .. You can also use the specific array methods.</p>
+                <h4>Please look the solution in the console</h4>
             </div>
         </div>
     </div>
